<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_8"
        android:layout_marginTop="@dimen/dimen_16"
        android:text="@string/notifications_reminder"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:textSize="@dimen/text_size_16"
        android:textStyle="bold" />

    <TextView
        style="@style/Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_8"
        android:layout_marginTop="@dimen/dimen_16"
        android:text="@string/release_reminder"
        android:textSize="@dimen/text_size_14"
        android:textStyle="bold" />

    <Switch
        android:id="@+id/notif_release"
        style="@style/Tvsmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_4"
        android:checked="false"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/summary_release"
        android:textSize="@dimen/text_size_13"
        android:textStyle="italic" />

    <TextView
        style="@style/Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_8"
        android:layout_marginTop="@dimen/dimen_8"
        android:text="@string/daily_reminders"
        android:textSize="@dimen/text_size_14"
        android:textStyle="bold" />

    <Switch
        android:id="@+id/notif_daily"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_4"
        android:checked="false"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/summary_daily"
        android:textSize="@dimen/text_size_13"
        android:textStyle="italic" />

</LinearLayout>